Internal: Fix file manager pagination and tab visibility issues - refs BT#21647

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -813,7 +813,7 @@ form .field {
 
   .thumbnail-item {
     width: 150px;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
